<resources>
    <string name="app_name">Company App UI</string>
    <string name="action_settings">Settings</string>
	<string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	<string name="next">Next</string>
    <string name="previous">Previous</string>
	<string name="num1">Number 1</string>
    <string name="num2">Number 2</string>
    <string name="result">Result</string>
    <string name="mod">Mod</string>
    <string name="add">Addition</string>
    <string name="subtract">Subtract</string>
    <string name="divide">Divide</string>
    <string name="power">Power</string>
</resources>
